HelloUltraviolet/Fixtures/RejectedSource/Expressions/RawDerefPlaceTypingFamily/Expected.uv
//! Expected diagnostic metadata for the RawDerefPlaceTypingFamily rejected-source specimen.

expectedDiagnostic("E-TYP-2103", "rule.16.DerefPlaceTypingFamily")
